<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, Events!</string>
	<string name="app_name">TimeReport</string>
	<string name="empty">No events!</string>
	<string name="widget_name">Event Widget</string>
	<string name="resolv_edit">Edit event</string>
	<string name="menu_add">Add</string>
	<string name="segment_start">Start</string>
	<string name="segment_end">End</string>
	<string name="segment_duration">Duration</string>
	<string name="button_set">Set</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_save">Save</string>
	<string name="button_delete">Delete</string>
	<string name="empty_string"></string>
	<string name="menu_delete">Delete</string>
	<string name="menu_projects">Projects</string>
	<string name="project_list">Project List</string>
	<string name="label_time">Time</string>
	<string name="label_date">Date</string>
	<string name="label_duration">Duration</string>
	<string name="label_project">Project</string>
	<string name="label_projectnr">Proj.nr</string>
	<string name="label_activity">Activity</string>
	<string name="label_actnt">Act.nr</string>
	<string name="label_rate">Rate</string>
	<string name="date_time_set">Set</string>
	<string name="cancel">Cancel</string>
	<string name="label_name">Name</string>
	<string name="label_num">Number</string>
	<string name="label_reference">Reference</string>
	<string name="label_status">Status</string>
	<string name="label_inactive">Inactive</string>
<string name="menu_activities">Activities</string>
<string name="activity_list">Activity</string>
<string name="no_entries">No Records!</string>
<string name="menu_export">Export</string>
<string name="export_cvs">CVS</string>
<string name="export_html">HTML</string>
<string name="export_file">FileName</string>
<string name="button_export">Export</string>
<string name="menu_more">More</string>
<string name="menu_database">Databases</string>
<string name="database_list">Databases</string>
<string name="no_databases">No Databases</string>
<string name="button_create">Create</string>
<string name="menu_new">New</string>
<string name="menu_dbimport">Import DB</string>
<string name="menu_dbexport">Export DB</string>
<string name="label_active">Active</string>
</resources>
