<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:orientation="vertical"
	android:layout_width="300sp">
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_height="wrap_content" android:layout_width="fill_parent">
	<LinearLayout android:id="@+id/LinearLayout07" android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">
		<LinearLayout android:id="@+id/LinearLayout02"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:background="@drawable/list_bg" android:orientation="vertical">
			<LinearLayout android:id="@+id/LinearLayout01"
				android:layout_height="wrap_content" android:layout_width="fill_parent">
				<TextView android:id="@+id/TextView02"
					android:layout_height="wrap_content" android:text="@string/label_name"
					android:textSize="18sp" android:layout_weight="2"
					android:textColor="@color/black" android:layout_width="0px"></TextView>
				<EditText android:layout_height="wrap_content"
					android:layout_weight="5" android:layout_width="0px" android:id="@+id/item_activity"></EditText>
			</LinearLayout>
			<LinearLayout android:id="@+id/LinearLayout03"
				android:layout_height="wrap_content" android:layout_width="fill_parent">
				<TextView android:id="@+id/TextView03"
					android:layout_height="wrap_content" android:text="@string/label_num"
					android:textSize="18sp" android:layout_weight="2"
					android:textColor="@color/black" android:layout_width="0px"></TextView>
				<EditText android:layout_height="wrap_content"
					android:layout_weight="5" android:id="@+id/item_num"
					android:layout_width="0px"></EditText>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:id="@+id/LinearLayout05"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:background="@drawable/list_bg" android:orientation="vertical">
			
			<LinearLayout android:id="@+id/LinearLayout04"
				android:layout_height="wrap_content" android:layout_width="fill_parent">



				<TextView android:id="@+id/TextView05"
					android:layout_height="wrap_content" android:layout_weight="2"
					android:textSize="18sp" android:textColor="@color/black" android:layout_width="0px" android:text="@string/label_active"></TextView>
				<CheckBox android:layout_height="wrap_content"
					android:textColor="@color/black" android:textSize="18sp"
					android:layout_width="0px" android:layout_weight="5" android:id="@+id/item_status"></CheckBox>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/ButtonsLinearLayout">
			<Button android:layout_height="wrap_content" android:text="@string/button_save"
				android:layout_weight="2" android:id="@+id/button_save"
				android:layout_gravity="center_vertical|center_horizontal"
				android:layout_width="0px"></Button>

			<Button android:layout_height="wrap_content" android:id="@+id/button_delete"
				android:text="@string/button_delete" android:layout_weight="2"
				android:layout_gravity="center_vertical|center_horizontal"
				android:layout_width="0px"></Button>
			<Button android:layout_height="wrap_content" android:text="@string/button_cancel"
				android:layout_weight="2" android:id="@+id/button_cancel"
				android:layout_gravity="center_vertical|center_horizontal"
				android:layout_width="0px"></Button>


		</LinearLayout>



	</LinearLayout>
</ScrollView>


</LinearLayout>
